Reworked compass trades